# zarra

./: .gitignore  LICENSE  README.md  meson.build
include/: zarra.h  zarra_static.h.in
src/: agent.c  cli.c  ffmpeg_parser.c  main.c  task.c  ui.c  utils.c
